apps/adguard/adguardhome-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome-sync
  template:
    metadata:
      labels:
        app: adguardhome-sync
    spec:
      containers:
        - name: adguardhome-sync
          image: ghcr.io/bakito/adguardhome-sync:latest
          imagePullPolicy: IfNotPresent
          args:
            - run
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "16Mi"
              cpu: "10m"
