apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-primary
spec:
  selector:
    app: adguard
    statefulset.kubernetes.io/pod-name: adguard-0
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-headless
spec:
  clusterIP: None
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  sessionAffinity: ClientIP
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  annotations:
    metallb.io/loadBalancerIPs: 192.168.0.244
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
