apps/adguard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.theorangeserver.net`)
      kind: Rule
      services:
        - name: adguard
          port: 3000
  tls:
    secretName: wildcard-certificate
